--- a/main.html
+++ b/main.html
@@ -9,6 +9,16 @@
 <body>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
+	<ol type="1">
+	<li data-ns-test="shoppingList">Charity to Orphans</li>
+	<li data-ns-test="shoppingList">Trip with Parents</li>
+	<li data-ns-test="shoppingList">Buy Anything for my Mama's Family</li>
+	</ol>
+	<ul type="none">
+	<li data-ns-test="holidayList">Charity to Orphans</li>
+	<li data-ns-test="holidayList">Trip with Parents</li>
+	<li data-ns-test="holidayList">Buy Anything for my Mama's Family</li>
+	</ul>
 </script>
 
 </body>
