--- a/main.html
+++ b/main.html
@@ -15,10 +15,10 @@
 	<li data-ns-test="shoppingList">Trip with Parents</li>
 	<li data-ns-test="shoppingList">Buy Anything for my Mama's Family</li>
 	</ol>
-	<ul type="none">
-	<li data-ns-test="holidayList">Charity to Orphans</li>
-	<li data-ns-test="holidayList">Trip with Parents</li>
-	<li data-ns-test="holidayList">Buy Anything for my Mama's Family</li>
+	<ul >
+	<li data-ns-test="holidayList">Kerala</li>
+	<li data-ns-test="holidayList">Kashmir</li>
+	<li data-ns-test="holidayList">Delhi</li>
 	</ul>
 
 
